Add New Comment

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 <script type="text/javascript">
 
+    //This lab will push to git
     //Q1-Method1
     function printHello(){
     console.log("Hello World");
