--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     }
     printHello();
 
+    function printHello(){
+        console.log("Hello GIT");
+    }
+    printHello();
+
     //Q1-Method2
     var printHello = function (){
         console.log("Hello World");
