Commit to the lab1 branch added

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             console.log(JSON.stringify(data));
         })
         .catch((error) => console.log(error));
+    //This comment put after pushing the code to lab1 branch
 
 </script>
 </body>
