From the visual tool

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <script type="text/javascript">
 
     //This lab will push to git
+
+    //New change for visual tool
+
     //Q1-Method1
     function printHello(){
     console.log("Hello World");
