Conflicting server comment added

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
         })
         .catch((error) => console.log(error));
     //This comment put after pushing the code to lab1 branch
+    
+    //Conflicting server edit
 
 </script>
 </body>
