Add a conflicting comment from local

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
         .catch((error) => console.log(error));
     //This comment put after pushing the code to lab1 branch
 
+    //Conflicting commit from local
+
 </script>
 </body>
 </html>
